# Y-GN

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP-02.md  ROADMAP.md  TRADEMARK.md
.github/workflows/: ci-python.yml  ci-rust.yml  security.yml
docs/: CAPABILITY_MATRIX.md  FACT_PACK.md  INVENTORY.md  SOURCE_LOCK.md
docs/plans/: 2026-02-26-refinement-harness-design.md  2026-02-26-refinement-harness-plan.md  2026-02-26-v040-implementation-plan.md  2026-02-26-v040-observable-governance-design.md  2026-02-26-v050-implementation-plan.md  2026-02-26-v050-production-ready-design.md  2026-02-26-v070-hardening-design.md  2026-02-26-v070-hardening-plan.md  2026-02-27-context-compiler-design.md  2026-02-27-context-compiler-plan.md
examples/: 01_cli_tools.sh  02_brain_pipeline.py  03_mcp_integration.py  golden_path.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
ygn-brain/: README.md  pyproject.toml
ygn-brain/src/ygn_brain/: __init__.py  codex_provider.py  context.py  context_compression.py  conversation.py  cosine.py  demo_compiler.py  dylan_metrics.py  embeddings.py  entity_extraction.py  event_sourcing.py  evidence.py  evolution.py  fsm.py  gemini_provider.py  guard.py  guard_backends.py  guard_download.py  guard_log.py  guard_ml.py  guard_stats.py  hivemind.py  mcp_client.py  mcp_server.py  memory.py  orchestrator.py  personality.py  provider.py  provider_factory.py  provider_router.py  repl.py  success_memory.py  swarm.py  teaming.py  telemetry.py  tiered_memory.py  tool_bridge.py  uacp.py  vla_adapter.py
ygn-brain/src/ygn_brain/context_compiler/: README.md  __init__.py  artifact_store.py  processors.py  session.py  token_budget.py  working_context.py
ygn-brain/src/ygn_brain/harness/: README.md  __init__.py  candidate.py  engine.py  memory_store.py  policy.py  selector.py  types.py  verifier.py
ygn-brain/src/ygn_brain/tool_interrupt/: README.md  __init__.py  events.py  handler.py  normalizer.py  schemas.py
ygn-brain/tests/: test_artifact_store.py  test_codex_hardening.py  test_codex_provider.py  test_context.py  test_context_compiler_e2e.py  test_context_compression.py  test_conversation.py  test_cosine.py  test_dylan_metrics.py  test_e2e_golden_path.py  test_embeddings.py  test_entity_extraction.py  test_event_sourcing.py  test_evidence.py  test_evolution.py  test_fsm.py  test_gemini_provider.py  test_guard.py  test_guard_benchmark.py  test_guard_download.py  test_guard_log.py  test_guard_ml.py  test_guard_stats.py  test_harness_candidate.py  test_harness_e2e.py  test_harness_engine.py  test_harness_memory.py  test_harness_policy.py  test_harness_types.py  test_harness_verifier.py  test_hivemind.py  test_hivemind_provider.py  test_hivemind_reliability.py  test_mcp_client.py  test_mcp_server.py  test_memory.py  test_memory_embeddings.py  test_normalizer.py  test_orchestrator.py  test_orchestrator_compiled.py  (+21 more)
ygn-core/: Cargo.toml  README.md
ygn-core/src/: a2a.rs  audit.rs  channel.rs  config.rs  credential_vault.rs  diagnostics.rs  discord.rs  gateway.rs  hardware.rs  landlock.rs  lib.rs  main.rs  matrix.rs  mcp.rs  memory.rs  multi_provider.rs  observer.rs  policy.rs  provider.rs  provider_health.rs  rate_limiter.rs  registry.rs  sandbox.rs  security.rs  skills.rs  sqlite_memory.rs  sqlite_registry.rs  telegram.rs  telemetry.rs  tool.rs  tunnel.rs  uacp.rs  wassette.rs
ygn-core/tests/: smoke_test.rs
ygn-dash/: README.md  package.json
ygn-dash/src/: App.tsx
(+14 files in other folders)
