[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ygn-brain"
version = "0.1.0"
description = "Y-GN cognitive control-plane: orchestration, multi-agent swarm, evidence packs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
ygn-brain-repl = "ygn_brain.repl:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ygn_brain"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
