[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ygn-brain"
version = "0.6.0"
description = "Y-GN cognitive control-plane: orchestration, multi-agent swarm, evidence packs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "pynacl>=1.5.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
ml = [
    "sentence-transformers>=3.0.0",
    "onnxruntime>=1.18.0",
    "transformers>=4.40.0",
]

[project.scripts]
ygn-brain-repl = "ygn_brain.repl:main"
ygn-brain-mcp = "ygn_brain.mcp_server:main"
ygn-brain-guard-download = "ygn_brain.guard_download:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ygn_brain"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring real CLI providers (Codex/Gemini)",
    "slow: slow tests",
]
