[package]
name = "ygn-core"
version = "0.3.0"
edition = "2021"
description = "Y-GN data-plane: tool execution, channels, tunnels, sandboxing, memory"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"
opentelemetry-otlp = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[workspace]
